added logo, menu, player

--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,11 @@
    ========================================================================== */
 
 html {
-  color: #222;
+  color: white;
   font-size: 1em;
   line-height: 1.4;
+
+  background: linear-gradient(rgb(0, 244, 254), rgb(0,128,170));
 }
 
 /*
@@ -82,10 +84,6 @@ fieldset {
 textarea {
   resize: vertical;
 }
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
 
 /* ==========================================================================
    Helper classes
