--- a/src/style/global.css
+++ b/src/style/global.css
@@ -3,6 +3,8 @@
   src: url("../../fonts/ms_yi_baiti.ttf");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 body {
   background: linear-gradient(rgb(0, 244, 254), rgb(0,128,170)) no-repeat;
   color: white;
