--- a/src/style/global.css
+++ b/src/style/global.css
@@ -6,6 +6,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 body {
-  background: linear-gradient(rgb(0, 244, 254), rgb(0,128,170)) no-repeat;
+  background: linear-gradient(rgb(0, 244, 254), rgb(0,128,170)) no-repeat fixed;
   color: white;
 }
